--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@expo/vector-icons": "^6.3.1",
     "axios": "^0.18.0",
     "expo": "^30.0.1",
+    "jwt-decode": "^2.2.0",
     "mobx": "^5.1.2",
     "mobx-react": "^5.2.8",
     "native-base": "^2.8.0",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz",
+    "react-native-scrollable-tab-view": "^0.8.0",
+    "react-router-native": "^4.3.0",
     "react-scrollbar": "^0.5.4"
   }
 }
